--- a/Contact/index.html
+++ b/Contact/index.html
@@ -78,8 +78,8 @@
     <section class="text-center">
         <p> ติดต่อ </p>
     </section>
-    <p class="text-center">นาย สุกฤษฏิ์ โอสถประสิทธิ์ 6506021411034@email.kmutnb.ac.th</p>
-    <p class="text-center">นาย พชร  ชยันฐมพันธ    6506021421196@email.kmutnb.ac.th</p>
+    <p class="text-center">นาย สุกฤษฏิ์ โอสถประสิทธิ์ s6506021411034@email.kmutnb.ac.th</p>
+    <p class="text-center">นาย พชร  ชยันฐมพันธ    s6506021421196@email.kmutnb.ac.th</p>
 <section class="position-absolute top-100 start-50 translate-middle">
     <div class="container">
         © Copyright 2022   
