--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/~sec2assign9/index.html"><i class="bi bi-house-door-fill"></i></a>
+            <a class="navbar-brand" href="index.html"><i class="bi bi-house-door-fill"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -40,8 +40,8 @@
                             ซีรีย์
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/~sec2assign9/Serial/Serial korea/index.html">ซีรีย์ เกาหลี</a></li>
-                            <li><a class="dropdown-item" href="/~sec2assign9/Serial/Serial eng/index.html">ซีรีย์ อังกฤษ</a></li>
+                            <li><a class="dropdown-item" href="Serial/Serial korea/index.html">ซีรีย์ เกาหลี</a></li>
+                            <li><a class="dropdown-item" href="Serial/Serial eng/index.html">ซีรีย์ อังกฤษ</a></li>
                             <li></li>
                         </ul>
                     </li>
@@ -51,13 +51,13 @@
                             หมวดหมู่
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/~sec2assign9/Moive/Movie_thai/index.html">หนังไทย</a></li>
-                            <li><a class="dropdown-item" href="/~sec2assign9/Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
+                            <li><a class="dropdown-item" href="Moive/Movie_thai/index.html">หนังไทย</a></li>
+                            <li><a class="dropdown-item" href="Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
                             <li></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/~sec2assign9/Contact/index.html"><i class="bi bi-telephone"></i>
+                        <a class="nav-link" href="Contact/index.html"><i class="bi bi-telephone"></i>
                             ติดต่อ</a>
                     </li>
 
@@ -76,57 +76,57 @@
             <div class="row row-col-auto">
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Moive/Movie Eng/HarryPotter/index.html">
-                            <img src="/~sec2assign9/image/HarryPorter.jpeg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="Moive/Movie Eng/HarryPotter/index.html">
+                            <img src="image/HarryPorter.jpeg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">Harry porter</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Serial/Serial korea/20thCenturyGirl/index.html">
-                            <img src="/~sec2assign9/image/20thCenturyGirl.jpeg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="Serial/Serial korea/20thCenturyGirl/index.html">
+                            <img src="image/20thCenturyGirl.jpeg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">20th Century Girl</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Moive/Movie_thai/อ๊ายคนหล่อลวง/index.html">
-                            <img src="/~sec2assign9/image/อ๊ายคนหล่อลวง.jpeg" class="mb-2" style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="Moive/Movie_thai/อ๊ายคนหล่อลวง/index.html">
+                            <img src="image/อ๊ายคนหล่อลวง.jpeg" class="mb-2" style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">อ๊ายคนหล่อลวง</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Moive/Movie Eng/the lord of the ring/index.html">
-                            <img src="/~sec2assign9/image/LoR.jpg" class="mb-2" style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="Moive/Movie Eng/the lord of the ring/index.html">
+                            <img src="image/LoR.jpg" class="mb-2" style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">The lord of the ring</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Moive/Movie Eng/The_Hobbit/index.html">
-                            <img src="/~sec2assign9/image/Hobbit.jpg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="Moive/Movie Eng/The_Hobbit/index.html">
+                            <img src="image/Hobbit.jpg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">The hobbit</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Serial/Serial eng/house of dragon/index.html">
-                            <img src="/~sec2assign9/image/House of the dragon.jpeg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="Serial/Serial eng/house of dragon/index.html">
+                            <img src="image/House of the dragon.jpeg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">House of the dragon</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Serial/Serial eng/Game of thones/index.html">
-                            <img src="/~sec2assign9/image/GoT.jpg" class="mb-2" style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="Serial/Serial eng/Game of thones/index.html">
+                            <img src="image/GoT.jpg" class="mb-2" style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">Game of thones</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Moive/Movie_thai/friend zone/index.html">
-                            <img src="/~sec2assign9/image/FriendZone.jpg" class="mb-2" style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="Moive/Movie_thai/friend zone/index.html">
+                            <img src="image/FriendZone.jpg" class="mb-2" style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">Friend Zone</h3>
                     </div>
                 </div>
