--- a/Moive/Movie Eng/index.html
+++ b/Moive/Movie Eng/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/~sec2assign9/index.html"><i class="bi bi-house-door-fill"></i></a>
+            <a class="navbar-brand" href="index.html"><i class="bi bi-house-door-fill"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -40,9 +40,9 @@
                             ซีรีย์
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/~sec2assign9/Serial/Serial korea/index.html">ซีรีย์
+                            <li><a class="dropdown-item" href="Serial/Serial korea/index.html">ซีรีย์
                                     เกาหลี</a></li>
-                            <li><a class="dropdown-item" href="/~sec2assign9/Serial/Serial eng/index.html">ซีรีย์
+                            <li><a class="dropdown-item" href="Serial/Serial eng/index.html">ซีรีย์
                                     อังกฤษ</a></li>
                             <li></li>
                         </ul>
@@ -53,15 +53,15 @@
                             หมวดหมู่
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/~sec2assign9/Moive/Movie_thai/index.html">หนังไทย</a>
+                            <li><a class="dropdown-item" href="Moive/Movie_thai/index.html">หนังไทย</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="/~sec2assign9/Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
+                                    href="Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
                             <li></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/~sec2assign9/Contact/index.html"><i class="bi bi-telephone"></i>
+                        <a class="nav-link" href="Contact/index.html"><i class="bi bi-telephone"></i>
                             ติดต่อ</a>
                     </li>
 
@@ -80,24 +80,24 @@
             <div class="row row-col-auto">
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Moive/Movie Eng/HarryPotter/index.html">
-                            <img src="/~sec2assign9/image/HarryPorter.jpeg" class="mb-2 "
+                        <a href="Moive/Movie Eng/HarryPotter/index.html">
+                            <img src="image/HarryPorter.jpeg" class="mb-2 "
                                 style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">Harry porter</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Moive/Movie Eng/the lord of the ring/index.html">
-                            <img src="/~sec2assign9/image/LoR.jpg" class="mb-2 " style="width: 256px; height: 384px;"
+                        <a href="Moive/Movie Eng/the lord of the ring/index.html">
+                            <img src="image/LoR.jpg" class="mb-2 " style="width: 256px; height: 384px;"
                                 alt="" /></a>
                         <h3 class="card-title md3">The lord of the ring</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="/~sec2assign9/Moive/Movie Eng/The_Hobbit/index.html">
-                            <img src="/~sec2assign9/image/Hobbit.jpg" class="mb-2" style="width: 256px; height: 384px;"
+                        <a href="Moive/Movie Eng/The_Hobbit/index.html">
+                            <img src="image/Hobbit.jpg" class="mb-2" style="width: 256px; height: 384px;"
                                 alt="" /></a>
                         <h3 class="card-title md3">The hobbit</h3>
                     </div>
