--- a/Moive/Movie_thai/อ๊ายคนหล่อลวง/index.html
+++ b/Moive/Movie_thai/อ๊ายคนหล่อลวง/index.html
@@ -15,7 +15,7 @@
      <!-- Navbar -->
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/~sec2assign9/index.html"><i class="bi bi-house-door-fill"></i></a>
+            <a class="navbar-brand" href="index.html"><i class="bi bi-house-door-fill"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -40,8 +40,8 @@
                             ซีรีย์
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/~sec2assign9/Serial/Serial korea/index.html">ซีรีย์ เกาหลี</a></li>
-                            <li><a class="dropdown-item" href="/~sec2assign9/Serial/Serial eng/index.html">ซีรีย์ อังกฤษ</a></li>
+                            <li><a class="dropdown-item" href="Serial/Serial korea/index.html">ซีรีย์ เกาหลี</a></li>
+                            <li><a class="dropdown-item" href="Serial/Serial eng/index.html">ซีรีย์ อังกฤษ</a></li>
                             <li></li>
                         </ul>
                     </li>
@@ -51,8 +51,8 @@
                             หมวดหมู่
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/~sec2assign9/Moive/Movie_thai/index.html">หนังไทย</a></li>
-                            <li><a class="dropdown-item" href="/~sec2assign9/Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
+                            <li><a class="dropdown-item" href="Moive/Movie_thai/index.html">หนังไทย</a></li>
+                            <li><a class="dropdown-item" href="Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
                             <a href="/public_html/Moive/" class=""></a>
                             <li></li>
                         </ul>
@@ -77,7 +77,7 @@
             <div class="row row-col-auto">
                 <div class="col-md-5 col-lg-3 border me-10">
                     <div class="card-body text-center">
-                        <img src="/~sec2assign9/image/อ๊ายคนหล่อลวง.jpeg" class="img-fluid" style="height:95% ;"
+                        <img src="image/อ๊ายคนหล่อลวง.jpeg" class="img-fluid" style="height:95% ;"
                             alt="Responsive image" />
                     </div>
                 </div>
