--- a/Serial/Serial korea/index.html
+++ b/Serial/Serial korea/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><i class="bi bi-house-door-fill"></i></a>
+            <a class="navbar-brand" href="/index.html"><i class="bi bi-house-door-fill"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -40,8 +40,8 @@
                             ซีรีย์
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Serial/Serial korea/index.html">ซีรีย์ เกาหลี</a></li>
-                            <li><a class="dropdown-item" href="Serial/Serial eng/index.html">ซีรีย์ อังกฤษ</a></li>
+                            <li><a class="dropdown-item" href="/Serial/Serial korea/index.html">ซีรีย์ เกาหลี</a></li>
+                            <li><a class="dropdown-item" href="/Serial/Serial eng/index.html">ซีรีย์ อังกฤษ</a></li>
                             <li></li>
                         </ul>
                     </li>
@@ -51,8 +51,8 @@
                             หมวดหมู่
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Moive/Movie_thai/index.html">หนังไทย</a></li>
-                            <li><a class="dropdown-item" href="Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
+                            <li><a class="dropdown-item" href="/Moive/Movie_thai/index.html">หนังไทย</a></li>
+                            <li><a class="dropdown-item" href="/Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
                             <li></li>
                         </ul>
                     </li>
@@ -77,7 +77,7 @@
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
                         <a href="/Serial/Serial korea/20thCenturyGirl/index.html">
-                            <img src="image/20thCenturyGirl.jpeg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
+                            <img src="/image/20thCenturyGirl.jpeg" class="mb-2 " style="width: 256px; height: 384px;" alt="" /></a>
                         <h3 class="card-title md3">20 th Century Girl</h3>
                     </div>
                 </div>
