--- a/Moive/Movie_thai/index.html
+++ b/Moive/Movie_thai/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><i class="bi bi-house-door-fill"></i></a>
+            <a class="navbar-brand" href="/index.html"><i class="bi bi-house-door-fill"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -40,9 +40,9 @@
                             ซีรีย์
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Serial/Serial korea/index.html">ซีรีย์
+                            <li><a class="dropdown-item" href="/Serial/Serial korea/index.html">ซีรีย์
                                     เกาหลี</a></li>
-                            <li><a class="dropdown-item" href="Serial/Serial eng/index.html">ซีรีย์
+                            <li><a class="dropdown-item" href="/Serial/Serial eng/index.html">ซีรีย์
                                     อังกฤษ</a></li>
                             <li></li>
                         </ul>
@@ -53,15 +53,14 @@
                             หมวดหมู่
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Moive/Movie_thai/index.html">หนังไทย</a>
+                            <li><a class="dropdown-item" href="/Moive/Movie_thai/index.html">หนังไทย</a>
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
+                            <li><a class="dropdown-item" href="/Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
                             <li></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Contact/index.html"><i class="bi bi-telephone"></i>
+                        <a class="nav-link" href="/Contact/index.html"><i class="bi bi-telephone"></i>
                             ติดต่อ</a>
                     </li>
 
@@ -80,17 +79,17 @@
             <div class="row row-col-auto">
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="Moive/Movie_thai/friend zone/index.html">
-                            <img src="image/FriendZone.jpg" class="mb-2 "
-                                style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="/Moive/Movie_thai/friend zone/index.html">
+                            <img src="/image/FriendZone.jpg" class="mb-2 " style="width: 256px; height: 384px;"
+                                alt="" /></a>
                         <h3 class="card-title md3">Harry porter</h3>
                     </div>
                 </div>
                 <div class="col-md-5 col-lg-3 border">
                     <div class="card-body text-center">
-                        <a href="Moive/Movie_thai/อ๊ายคนหล่อลวง/index.html">
-                            <img src="image/อ๊ายคนหล่อลวง.jpeg" class="mb-2 "
-                                style="width: 256px; height: 384px;" alt="" /></a>
+                        <a href="/Moive/Movie_thai/อ๊ายคนหล่อลวง/index.html">
+                            <img src="/image/อ๊ายคนหล่อลวง.jpeg" class="mb-2 " style="width: 256px; height: 384px;"
+                                alt="" /></a>
                         <h3 class="card-title md3">20th Century Girl</h3>
                     </div>
                 </div>
