--- a/Serial/Serial eng/Game of thones/index.html
+++ b/Serial/Serial eng/Game of thones/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><i class="bi bi-house-door-fill"></i></a>
+            <a class="navbar-brand" href="/index.html"><i class="bi bi-house-door-fill"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -40,9 +40,9 @@
                             ซีรีย์
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Serial/Serial korea/index.html">ซีรีย์
+                            <li><a class="dropdown-item" href="/Serial/Serial korea/index.html">ซีรีย์
                                     เกาหลี</a></li>
-                            <li><a class="dropdown-item" href="Serial/Serial eng/index.html">ซีรีย์
+                            <li><a class="dropdown-item" href="/Serial/Serial eng/index.html">ซีรีย์
                                     อังกฤษ</a></li>
                             <li></li>
                         </ul>
@@ -53,15 +53,15 @@
                             หมวดหมู่
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Moive/Movie_thai/index.html">หนังไทย</a>
+                            <li><a class="dropdown-item" href="/Moive/Movie_thai/index.html">หนังไทย</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
+                                    href="/Moive/Movie Eng/index.html">หนังต่างประเทศ</a></li>
                             <li></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Contact/index.html"><i class="bi bi-telephone"></i>
+                        <a class="nav-link" href="/Contact/index.html"><i class="bi bi-telephone"></i>
                             ติดต่อ</a>
                     </li>
 
@@ -80,7 +80,7 @@
             <div class="row row-col-auto">
                 <div class="col-md-5 col-lg-3 border me-10">
                     <div class="card-body text-center">
-                        <img src="image/GoT.jpg" class="img-fluid" style="height:95% ;"
+                        <img src="/image/GoT.jpg" class="img-fluid" style="height:95% ;"
                             alt="Responsive image" />
                     </div>
                 </div>
